# openfhe-secure-maxcosine

./: .clangd  CMakeLists.txt  README.md  commands.txt
include/: config.h  openFHE_lib.h  store.h
scripts/: generate_data.js  metrics_test.js
src/: main.cpp  multi.cpp  openFHE_impl.cpp  secureFHE.cpp
